cpp/usd_bridge/usd_bridge.h

// ============================================================================
// Opaque Types
// ============================================================================

/// Opaque handle to a USD stage
typedef struct UsdBridgeStage UsdBridgeStage;
// ============================================================================
// Error Handling
// ============================================================================

/// Error codes returned by USD bridge functions
typedef enum UsdBridgeError {
    USD_BRIDGE_SUCCESS = 0,
    USD_BRIDGE_ERROR_NULL_POINTER = 1,
    USD_BRIDGE_ERROR_FILE_NOT_FOUND = 2,
    USD_BRIDGE_ERROR_INVALID_STAGE = 3,
    USD_BRIDGE_ERROR_INVALID_PRIM = 4,
    USD_BRIDGE_ERROR_OUT_OF_MEMORY = 5,
    USD_BRIDGE_ERROR_UNKNOWN = 99,
} UsdBridgeError;
// (usd_bridge_edit_layer_add_payload declared below, after UsdBridgeEditLayer)

// ============================================================================
// Variant Query / Selection
// ============================================================================

/// Get the number of variant sets on a prim.
UsdBridgeError usd_bridge_get_variant_set_count(
    const UsdBridgeStage* stage,
    const char* prim_path,
    size_t* out_count
);
/// Get a variant set name by index.
UsdBridgeError usd_bridge_get_variant_set_name(
    const UsdBridgeStage* stage,
    const char* prim_path,
    size_t index,
    const char** out_name
);
/// Get the number of variants in a variant set.
UsdBridgeError usd_bridge_get_variant_count(
    const UsdBridgeStage* stage,
    const char* prim_path,
    const char* variant_set_name,
    size_t* out_count
);
/// Get a variant name by index within a variant set.
UsdBridgeError usd_bridge_get_variant_name(
    const UsdBridgeStage* stage,
    const char* prim_path,
    const char* variant_set_name,
    size_t index,
    const char** out_name
);
/// Get the current variant selection for a variant set.
UsdBridgeError usd_bridge_get_variant_selection(
    const UsdBridgeStage* stage,
    const char* prim_path,
    const char* variant_set_name,
    const char** out_selection
);
/// Set the variant selection for a variant set (triggers re-composition).
UsdBridgeError usd_bridge_set_variant_selection(
    UsdBridgeStage* stage,
    const char* prim_path,
    const char* variant_set_name,
    const char* variant_name
);
/// BasisCurves data structure for FFI transfer
typedef struct UsdBridgeCurvesData {
    /// Prim path
    const char* path;

    /// Control point positions (x, y, z triplets)
    const float* points;
    size_t point_count;

    /// Per-vertex or per-curve widths (optional)
    const float* widths;
    size_t width_count;

    /// Vertex counts per curve
    const int32_t* curve_vertex_counts;
    size_t curve_count;

    /// Curve type (linear or cubic)
    UsdBridgeCurveType type;

    /// Curve basis (bezier, bspline, catmull-rom) — only meaningful for cubic
    UsdBridgeCurveBasis basis;

    /// Wrap mode (nonperiodic, periodic, pinned)
    UsdBridgeCurveWrap wrap;

    /// World transform (4x4 column-major matrix)
    float transform[16];
} UsdBridgeCurvesData;
/// Get the number of UsdGeomBasisCurves prims in the stage.
UsdBridgeError usd_bridge_get_curves_count(
    const UsdBridgeStage* stage,
    size_t* out_count
);
/// Get curves data by index.
UsdBridgeError usd_bridge_get_curves(
    const UsdBridgeStage* stage,
    size_t index,
    UsdBridgeCurvesData* out_data
);
// ============================================================================
// UsdSkel Data Extraction
// ============================================================================

/// Skeleton data for FFI transfer
typedef struct UsdBridgeSkeletonData {
    /// Prim path
    const char* path;

    /// Joint paths (array of token strings, e.g., "Hips/Spine/Chest")
    const char* const* joint_paths;
    size_t joint_count;

    /// Bind transforms (4x4 column-major per joint, joint_count * 16 floats)
    const float* bind_transforms;

    /// Rest transforms (4x4 column-major per joint, joint_count * 16 floats)
    const float* rest_transforms;
} UsdBridgeSkeletonData;
/// Skin binding data for a skinned mesh
typedef struct UsdBridgeSkinBindingData {
    /// Mesh prim path
    const char* mesh_path;

    /// Skeleton prim path this mesh is bound to
    const char* skeleton_path;

    /// Joint indices per vertex (joint_indices_element_size per vertex)
    const int32_t* joint_indices;
    size_t joint_indices_count;

    /// Joint weights per vertex (same layout as joint_indices)
    const float* joint_weights;
    size_t joint_weights_count;

    /// Number of influences per vertex
    size_t joint_indices_element_size;

    /// Geom bind transform (4x4 column-major)
    float geom_bind_transform[16];
} UsdBridgeSkinBindingData;
/// Get the number of UsdSkelSkeleton prims.
UsdBridgeError usd_bridge_get_skeleton_count(
    const UsdBridgeStage* stage,
    size_t* out_count
);
/// Get skeleton data by index.
UsdBridgeError usd_bridge_get_skeleton(
    const UsdBridgeStage* stage,
    size_t index,
    UsdBridgeSkeletonData* out_data
);
/// Get skin binding data for a mesh (if it has UsdSkelBindingAPI).
/// Returns USD_BRIDGE_ERROR_INVALID_PRIM if mesh has no skin binding.
UsdBridgeError usd_bridge_get_skin_binding(
    const UsdBridgeStage* stage,
    size_t mesh_index,
    UsdBridgeSkinBindingData* out_data
);
// ============================================================================
// UsdVol Data Extraction
// ============================================================================

/// Volume data for FFI transfer
typedef struct UsdBridgeVolumeData {
    /// Prim path
    const char* path;

    /// OpenVDB file path (resolved)
    const char* vdb_file_path;

    /// Field name within the VDB file (e.g., "density", "temperature")
    const char* field_name;

    /// World transform (4x4 column-major matrix)
    float transform[16];
} UsdBridgeVolumeData;
/// Get the number of volume prims in the stage.
UsdBridgeError usd_bridge_get_volume_count(
    const UsdBridgeStage* stage,
    size_t* out_count
);
/// Get volume data by index.
UsdBridgeError usd_bridge_get_volume(
    const UsdBridgeStage* stage,
    size_t index,
    UsdBridgeVolumeData* out_data
);
// ============================================================================
// Edit Layer Export
// ============================================================================

/// Opaque handle to an edit layer (a writable USD stage).
typedef struct UsdBridgeEditLayer UsdBridgeEditLayer;
/// Add a payload arc on an edit layer prim.
UsdBridgeError usd_bridge_edit_layer_add_payload(
    UsdBridgeEditLayer* layer,
    const char* prim_path,
    const char* asset_path,
    const char* target_path
);
// ============================================================================
// GeomSubset Export
// ============================================================================

/// Write a UsdGeomSubset child prim for per-face material assignment.
///
/// @param layer Edit layer handle
/// @param mesh_path Parent mesh prim path
/// @param subset_name Name for the subset prim (e.g., "mat_0")
/// @param face_indices Array of face indices belonging to this subset
/// @param face_count Number of face indices
/// @param material_path Material to bind to this subset (NULL to skip binding)
/// @return USD_BRIDGE_SUCCESS on success
UsdBridgeError usd_bridge_write_geom_subset(
    UsdBridgeEditLayer* layer,
    const char* mesh_path,
    const char* subset_name,
    const int* face_indices,
    size_t face_count,
    const char* material_path
);
// ============================================================================
// PointInstancer InvisibleIds Export
// ============================================================================

/// Write invisibleIds attribute on a UsdGeomPointInstancer.
///
/// @param layer Edit layer handle
/// @param instancer_path PointInstancer prim path
/// @param ids Array of instance IDs to hide
/// @param count Number of IDs
/// @return USD_BRIDGE_SUCCESS on success
UsdBridgeError usd_bridge_write_invisible_ids(
    UsdBridgeEditLayer* layer,
    const char* instancer_path,
    const int64_t* ids,
    size_t count
);
// ============================================================================
// Prim Attribute Inspection
// ============================================================================

/// A single USD attribute/primvar with name, type, and value as string.
typedef struct UsdBridgeAttributeData {
    const char* name;        // Attribute name (e.g., "points", "primvars:st")
    const char* type_name;   // USD type (e.g., "point3f[]", "token", "float")
    const char* value_str;   // Value as string (scalars: actual value, arrays: "[count]")
    int is_primvar;          // 1 if this is a primvar, 0 if regular attribute
    const char* interpolation; // Primvar interpolation ("constant", "uniform", "vertex", "faceVarying") or ""
    int is_authored;         // 1 if authored (has opinion), 0 if fallback/default
} UsdBridgeAttributeData;
/// Get all attributes for a prim by path.
/// Caller must call usd_bridge_free_prim_attributes() to free the returned data.
///
/// @param stage Stage handle
/// @param prim_path USD prim path (e.g., "/World/Mesh")
/// @param out_attributes Pointer to receive attribute array
/// @param out_count Pointer to receive attribute count
/// @return USD_BRIDGE_SUCCESS on success
UsdBridgeError usd_bridge_get_prim_attributes(
    const UsdBridgeStage* stage,
    const char* prim_path,
    UsdBridgeAttributeData** out_attributes,
    size_t* out_count
);
/// Free attribute data returned by usd_bridge_get_prim_attributes.
void usd_bridge_free_prim_attributes(
    UsdBridgeAttributeData* attributes,
    size_t count
);