crates/bif_core/src/usd/ffi_raw.rs


    pub(crate) fn usd_bridge_edit_layer_add_payload(
        layer: *mut UsdBridgeEditLayerRaw,
        prim_path: *const c_char,
        asset_path: *const c_char,
        target_path: *const c_char,
    ) -> UsdBridgeErrorCode;

    // Variant query/selection
    pub(crate) fn usd_bridge_get_variant_set_count(
        stage: *const UsdBridgeStageRaw,
        prim_path: *const c_char,
        out_count: *mut usize,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_variant_set_name(
        stage: *const UsdBridgeStageRaw,
        prim_path: *const c_char,
        index: usize,
        out_name: *mut *const c_char,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_variant_count(
        stage: *const UsdBridgeStageRaw,
        prim_path: *const c_char,
        variant_set_name: *const c_char,
        out_count: *mut usize,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_variant_name(
        stage: *const UsdBridgeStageRaw,
        prim_path: *const c_char,
        variant_set_name: *const c_char,
        index: usize,
        out_name: *mut *const c_char,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_variant_selection(
        stage: *const UsdBridgeStageRaw,
        prim_path: *const c_char,
        variant_set_name: *const c_char,
        out_selection: *mut *const c_char,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_set_variant_selection(
        stage: *mut UsdBridgeStageRaw,
        prim_path: *const c_char,
        variant_set_name: *const c_char,
        variant_name: *const c_char,
    ) -> UsdBridgeErrorCode;

    // BasisCurves
    pub(crate) fn usd_bridge_get_curves_count(
        stage: *const UsdBridgeStageRaw,
        out_count: *mut usize,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_curves(
        stage: *const UsdBridgeStageRaw,
        index: usize,
        out_data: *mut UsdBridgeCurvesDataRaw,
    ) -> UsdBridgeErrorCode;

    // Skeleton
    pub(crate) fn usd_bridge_get_skeleton_count(
        stage: *const UsdBridgeStageRaw,
        out_count: *mut usize,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_skeleton(
        stage: *const UsdBridgeStageRaw,
        index: usize,
        out_data: *mut UsdBridgeSkeletonDataRaw,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_skin_binding(
        stage: *const UsdBridgeStageRaw,
        mesh_index: usize,
        out_data: *mut UsdBridgeSkinBindingDataRaw,
    ) -> UsdBridgeErrorCode;

    // Volumes
    pub(crate) fn usd_bridge_get_volume_count(
        stage: *const UsdBridgeStageRaw,
        out_count: *mut usize,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_volume(
        stage: *const UsdBridgeStageRaw,
        index: usize,
        out_data: *mut UsdBridgeVolumeDataRaw,
    ) -> UsdBridgeErrorCode;

    // Collection material binding handled by existing get_mesh_material_path
    // (ComputeBoundMaterial resolves both direct and collection-based bindings)

    // GeomSubset export
    pub(crate) fn usd_bridge_write_geom_subset(
        layer: *mut UsdBridgeEditLayerRaw,
        mesh_path: *const c_char,
        subset_name: *const c_char,
        face_indices: *const i32,
        face_count: usize,
        material_path: *const c_char,
    ) -> UsdBridgeErrorCode;

    // PointInstancer invisibleIds export
    pub(crate) fn usd_bridge_write_invisible_ids(
        layer: *mut UsdBridgeEditLayerRaw,
        instancer_path: *const c_char,
        ids: *const i64,
        count: usize,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_prim_attributes(
        stage: *const UsdBridgeStageRaw,
        prim_path: *const c_char,
        out_attributes: *mut *mut UsdBridgeAttributeDataRaw,
        out_count: *mut usize,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_free_prim_attributes(
        attributes: *mut UsdBridgeAttributeDataRaw,
        count: usize,
    );
}
